--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 <body>
 
+    <div id="score">Hi</div>
     <div id="score">Score: 0</div>
     <div class="grid">
         <div class="cell" id="c1"></div>
