--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
         .mole {
             background: #ffcc00;
         }
+
+        .active {
+            background: #ff6666;
+        }
     </style>
 </head>
 
 <body>
-
-    <div id="score">Hi</div>
+    <div id="timer"></div>
+    <button id="startButton" onclick="startGame()">Start Game</button>
     <div id="score">Score: 0</div>
     <div class="grid">
         <div class="cell" id="c1"></div>
