--- a/re.html
+++ b/re.html
@@ -154,6 +154,8 @@
                     clearInterval(moleInterval);
                     timeDisplay.innerText = '時間到！';
                     startBtn.disabled = false;
+                    startBtn.innerText = 'START';
+
                 };
             };
         };
